package com.twilio.verify.networking

enum class HttpMethod(method: String) {
    Get("GET"),
    Post("POST"),
    Delete("DELETE"),
    Put("PUT")
}